# worldbuilder

./: .env.example  docker-compose.yml  main.py  pyproject.toml  pythonconfig.json  test.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 626400cfc306_fix_typo.py  6dc5268ae936_add_timezone_to_created_at.py  72dec9ce5325_create_worlds_table.py  c4b74cfce512_create_worlds_table.py
app/: main.py
app/api/v1/routes/: names.py  worlds.py
app/core/: config.py  database.py  dependencies.py
app/models/: world.py
app/repositories/: world_repository.py
app/services/ai/: client.py  generation.py
tests/: conftest.py
tests/integration/: test_worlds.py
